# wechsel-wallpaper

./: Cargo.toml  LICENSE  README.md
config_files/: wechsel-plugin  wechsel-wallpaper  wechsel-wallpaper-deinit
src/: main.rs
